--- a/aaas-api-user-info/src/main/resources/application-local.yml
+++ b/aaas-api-user-info/src/main/resources/application-local.yml
@@ -1,64 +1,42 @@
 ---
 server:
   port: 10060
-  contextPath: /
----
+
 logging:
   level:
-    org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
-    org.springframework.data: debug
-context:
-  name: aaas-api-user-info
-log:
-  dir: ./logs/aaas-api-user-info
-rolling:
-  policy:
-    file:
-    name:
-      pattern: yyyy-MM-dd HH
-max:
-  file:
-  size: 100MB
-  history: 50
+    org.hibernate.SQL: info
+    org.hibernate.type.descriptor.sql.BasicBinder: info
+    org.springframework.data: info
 
-conversion:
-  pattern: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{30}[%line]: %m%n"
-root:
-  level: info
----
+
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: update
   data:
     mongodb:
-      database: test1
+      database: ssfui
       host: 192.168.1.10
       port: 27017
       zhongzheng: "zhongzheng"
       funds: "funds"
+  jpa:
+    hibernate:
+      ddl-auto: update
   rabbitmq:
-    listener:
-      simple:
-        acknowledge-mode: auto
-    username: ssf
-    password: shellshellfish
-    host: 192.168.1.65
-    port: 5672
-    virtual-host: aaas
+     listener:
+       simple:
+         acknowledge-mode: auto
+     username: ssf
+     password: shellshellfish
+     host: 192.168.1.65
+     port: 5672
+     virtual-host: aaas
 
-    topicQueuePayName: com-ssf-topic-queue-pay
-    topicQueueOrderName: com-ssf-topic-queue-order
-    topicQueueUserinfoName: com-ssf-topic-queue-userinfo
-    topicExchangeName: com-ssf-topic-exchange
-    topicPay: shellshellfish.pay
-    topicOrder: shellshellfish.order
-    topicUserinfo: shellshellfish.userinfo
   redis:
     host: 192.168.1.10
     port: 6379
     password: redis123
+    timeout: 0
+    pool:
+
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
@@ -78,7 +56,6 @@ datasource:
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
 
-
 grpc:
   userinfo:
     host: localhost
@@ -95,12 +72,16 @@ grpc:
   datacollection-server-rpc:
     host: localhost
     port: 10091
+
+
 aaas-api-finance-url: http://localhost:10120
+
 api-asset-alloction-url: http://localhost:10020
-cron:
-  frequency:
-    #Seconds	Minutes	Hours	Day Of Month	Month	Day Of Week	Year
-    #     0	0	5,17,22	?	*	*	*
-    jobinvalidprodcheck: 0 0 5,13,17,22 ? * * *
+
 # 每日收益计算 多线程
 daily-finance-calculate-thread: 8
+
+management:
+  endpoints:
+    web:
+      base-path: /
