--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -19,10 +19,11 @@
     <properties>
         <java.version>1.8</java.version>
         <h2.version>1.4.187</h2.version>
-        <grpc.version>1.10.0</grpc.version>
+        <grpc.version>1.11.0</grpc.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.13</slf4j.version>
         <logback.version>1.1.3</logback.version>
+        <protobufGeneratorPath>${project.build.directory}/generated-source/protobuf</protobufGeneratorPath>
     </properties>
 
 
@@ -246,10 +247,24 @@
                 </executions>
             </plugin>
             <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${protobufGeneratorPath}</directory>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1</version>
                 <configuration>
+                    <checkStaleness>true</checkStaleness>
                     <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
                     <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
