--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -18,7 +18,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<h2.version>1.4.187</h2.version>
-		<grpc.version>1.10.0</grpc.version>
+		<grpc.version>1.11.0</grpc.version>
+		<protobufGeneratorPath>${project.build.directory}/generated-source/protobuf</protobufGeneratorPath>
 	</properties>
 
 	<dependencies>
@@ -156,11 +157,23 @@
                     </execution>
                 </executions>
             </plugin>
-
+					<plugin>
+						<artifactId>maven-clean-plugin</artifactId>
+						<configuration>
+							<filesets>
+								<fileset>
+									<directory>${protobufGeneratorPath}</directory>
+									<includes>
+										<include>**</include>
+									</includes>
+								</fileset>
+							</filesets>
+						</configuration>
+					</plugin>
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-                <version>0.5.0</version>
+                <version>0.5.1</version>
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
@@ -176,6 +189,25 @@
                     </execution>
                 </executions>
             </plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>build-helper-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>add-source</id>
+								<phase>generate-sources</phase>
+								<goals>
+									<goal>add-source</goal>
+								</goals>
+								<configuration>
+									<sources>
+										<source>${protobufGeneratorPath}</source>
+									</sources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
