--- a/aaas-api-dm/src/main/resources/application-test.yml
+++ b/aaas-api-dm/src/main/resources/application-test.yml
@@ -14,19 +14,19 @@ spring:
     multipart:
       max-file-size: 2MB
       max-request-size: 10MB
-datasource:
-  sampleapp:
-    url: jdbc:mysql://192.168.1.249:30006/ssftrdorder?useUnicode=true&characterEncoding=utf-8
-    username: sa
-    password: N4eTVr89lX9BaPcx
-    driverClassName: com.mysql.jdbc.Driver
-    defaultSchema:
-    maxPoolSize: 20
-    hibernate:
-      hbm2ddl.method: update
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.MySQLDialect
+#datasource:
+#  sampleapp:
+#    url: jdbc:mysql://192.168.1.249:30006/ssftrdorder?useUnicode=true&characterEncoding=utf-8
+#    username: sa
+#    password: N4eTVr89lX9BaPcx
+#    driverClassName: com.mysql.jdbc.Driver
+#    defaultSchema:
+#    maxPoolSize: 20
+#    hibernate:
+#      hbm2ddl.method: update
+#      show_sql: true
+#      format_sql: true
+#      dialect: org.hibernate.dialect.MySQLDialect
 shellshellfish:
   asset-alloction-url: "http://localhost:10020"
   userinfo-url: "http://localhost:10060"
