--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.shellshellfish</groupId>
@@ -25,9 +25,6 @@
         <logback.version>1.1.3</logback.version>
         <protobufGeneratorPath>${project.build.directory}/generated-source/protobuf</protobufGeneratorPath>
     </properties>
-
-
-
 
 
     <dependencies>
@@ -267,6 +264,10 @@
                                     <directory>../proto/datacollection/</directory>
                                     <filtering>true</filtering>
                                 </resource>
+                                <resource>
+                                    <directory>../proto/asset-allocation/</directory>
+                                    <filtering>true</filtering>
+                                </resource>
                             </resources>
                         </configuration>
                     </execution>
@@ -293,7 +294,8 @@
                     <clearOutputDirectory>false</clearOutputDirectory>
                     <protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
                     <pluginId>grpc-java</pluginId>
-                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
+                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
+                    </pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
