--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -16,6 +16,7 @@ spring:
     host: 192.168.1.249
     port: 5672
     virtual-host: aaas
+    topicOrder: shellshellfish.order
 
   data:
     mongodb:
