--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -25,7 +25,7 @@ spring:
         acknowledge-mode: auto
     username: ssf
     password: shellshellfish
-    host: 192.168.1.249
+    host: localhost
     port: 35672
     virtual-host: aaas
     topicQueuePayName: com.ssf.topic.queue.pay
