--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -19,7 +19,7 @@ spring:
         acknowledge-mode: auto
     username: ssf
     password: shellshellfish
-    host: 192.168.1.249
+    host: localhost
     port: 35672
     virtual-host: aaas
     topicQueuePayName: com-ssf-topic-name-pay
